fix overlapping feed

--- a/src/components/Feed/Feed.css
+++ b/src/components/Feed/Feed.css
@@ -1,11 +1,11 @@
 .Feed {
     background-color: var(--snow);
     color: var(--black);
-    margin-left: 20rem;
+    margin-left: 22rem;
     margin-top: 0;
     top: 0;
     height: 100vh;
-    padding: 1rem 1rem 1rem 3rem;
+    padding: 1rem;
 }
 
 p {
